fixed align icon in footer

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -49,6 +49,8 @@
 }
 
 .socialLink {
+  display: flex;
+  align-items: center;
   flex: 1 1 auto;
   padding: 14px;
   box-sizing: border-box;
